y.output
State 28 conflicts: 1 shift/reduce
State 62 conflicts: 1 reduce/reduce
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMD CMDs
    3     | DECL_VAR ';' CMDs
    4     | DECL_FUN CMDs
    5     | %empty

    6 CMD: CMD_FOR
    7    | CMD_IF
    8    | CMD_WHILE
    9    | E_V ';'
   10    | '{' CMD CMDs '}'
   11    | '{' '}'
   12    | ';'
   13    | _RETURN ';'
   14    | _RETURN EE ';'

   15 CMD_IF: _IF '(' E ')' CMD _ELSE CMD
   16       | _IF '(' E ')' CMD

   17 CMD_FOR: _FOR '(' E_OPC ';' E_OPC ';' E_OPC ')' CMD
   18        | _FOR '(' DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

   19 CMD_WHILE: _WHILE '(' E ')' CMD

   20 E_OPC: E_V
   21      | %empty

   22 DECL_VAR: _LET LVARs
   23         | _VAR VVARs
   24         | _CONST CTEs

   25 DECL_FUN: _FUNCTION _ID '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   26         | _FUNCTION _ID '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO

   27 NOVO_ESCOPO: %empty

   28 DESTROI_ESCOPO: %empty

   29 PARAMs: PARAM ',' PARAMs
   30       | PARAM

   31 PARAM: _ID '=' EE
   32      | _ID

   33 LVARs: LVAR ',' LVARs
   34      | LVAR

   35 VVARs: VVAR ',' VVARs
   36      | VVAR

   37 LVAR: _ID '=' EE
   38     | _ID

   39 VVAR: _ID '=' EE
   40     | _ID

   41 CTEs: _ID '=' EE ',' CTEs
   42     | _ID '=' EE

   43 E_V: E ',' E_V
   44    | E

   45 EE: E
   46   | '{' '}'

   47 E: _ID '=' EE
   48  | _ID _MAIS_IGUAL EE
   49  | _ID _MENOS_IGUAL EE
   50  | _ID _SETA EE
   51  | _ID _SETA '{' CMD CMDs '}'
   52  | EE _INC
   53  | '(' _FPSETA EE
   54  | '(' PARAMs _FPSETA EE
   55  | F '.' _ID '=' EE
   56  | F '.' _ID _MAIS_IGUAL EE
   57  | F '[' EE ']' '=' EE
   58  | F '[' EE ']' _MAIS_IGUAL EE
   59  | EE '<' EE
   60  | EE '*' EE
   61  | EE '+' EE
   62  | EE '-' EE
   63  | EE '/' EE
   64  | EE '>' EE
   65  | EE '%' EE
   66  | EE _IGUAL_IGUAL EE
   67  | F

   68 F: _ID
   69  | _NUM
   70  | _STRING
   71  | '(' EE ')'
   72  | F '(' ')'
   73  | F '[' EE ']'
   74  | F '(' ARGs ')'
   75  | '[' ']'
   76  | '[' ARGs ']'
   77  | '{' CAMPOs '}'
   78  | EE '.' _ID
   79  | FUNC_ANON
   80  | '-' _NUM

   81 FUNC_ANON: _FUNCTION '(' ')' '{' CMDs '}'
   82          | _FUNCTION '(' PARAMs ')' '{' CMDs '}'

   83 CAMPOs: CAMPOs ',' CAMPOs
   84       | _ID ':' EE

   85 ARGs: EE ',' ARGs
   86     | EE


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 65
    '(' (40) 15 16 17 18 19 25 26 53 54 71 72 74 81 82
    ')' (41) 15 16 17 18 19 25 26 71 72 74 81 82
    '*' (42) 60
    '+' (43) 61
    ',' (44) 29 33 35 41 43 83 85
    '-' (45) 62 80
    '.' (46) 55 56 78
    '/' (47) 63
    ':' (58) 84
    ';' (59) 3 9 12 13 14 17 18
    '<' (60) 59
    '=' (61) 31 37 39 41 42 47 55 57
    '>' (62) 64
    '[' (91) 57 58 73 75 76
    ']' (93) 57 58 73 75 76
    '{' (123) 10 11 25 26 46 51 77 81 82
    '}' (125) 10 11 25 26 46 51 77 81 82
    error (256)
    _ID (258) 25 26 31 32 37 38 39 40 41 42 47 48 49 50 51 55 56 68 78 84
    _NUM (259) 69 80
    _STRING (260) 70
    _LET (261) 22
    _VAR (262) 23
    _CONST (263) 24
    _FOR (264) 17 18
    _FUNCTION (265) 25 26 81 82
    _IF (266) 15 16
    _ELSE (267) 15
    _INC (268) 52
    _RETURN (269) 13 14
    _SETA (270) 50 51
    _FPSETA (271) 53 54
    _MAIS_IGUAL (272) 48 56 58
    _IGUAL_IGUAL (273) 66
    _MENOS_IGUAL (274) 49
    _WHILE (275) 19


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    S (40)
        on left: 1
        on right: 0
    CMDs (41)
        on left: 2 3 4 5
        on right: 1 2 3 4 10 25 26 51 81 82
    CMD (42)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 2 10 15 16 17 18 19 51
    CMD_IF (43)
        on left: 15 16
        on right: 7
    CMD_FOR (44)
        on left: 17 18
        on right: 6
    CMD_WHILE (45)
        on left: 19
        on right: 8
    E_OPC (46)
        on left: 20 21
        on right: 17 18
    DECL_VAR (47)
        on left: 22 23 24
        on right: 3 18
    DECL_FUN (48)
        on left: 25 26
        on right: 4
    NOVO_ESCOPO (49)
        on left: 27
        on right: 25 26
    DESTROI_ESCOPO (50)
        on left: 28
        on right: 25 26
    PARAMs (51)
        on left: 29 30
        on right: 26 29 54 82
    PARAM (52)
        on left: 31 32
        on right: 29 30
    LVARs (53)
        on left: 33 34
        on right: 22 33
    VVARs (54)
        on left: 35 36
        on right: 23 35
    LVAR (55)
        on left: 37 38
        on right: 33 34
    VVAR (56)
        on left: 39 40
        on right: 35 36
    CTEs (57)
        on left: 41 42
        on right: 24 41
    E_V (58)
        on left: 43 44
        on right: 9 20 43
    EE (59)
        on left: 45 46
        on right: 14 31 37 39 41 42 47 48 49 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 71 73 78 84 85 86
    E (60)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 15 16 19 43 44 45
    F (61)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 55 56 57 58 67 72 73 74
    FUNC_ANON (62)
        on left: 81 82
        on right: 79
    CAMPOs (63)
        on left: 83 84
        on right: 77 83
    ARGs (64)
        on left: 85 86
        on right: 74 76 85


State 0

    0 $accept: . S $end

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 15
    '{'        shift, and go to state 16

    $default  reduce using rule 5 (CMDs)

    S          go to state 17
    CMDs       go to state 18
    CMD        go to state 19
    CMD_IF     go to state 20
    CMD_FOR    go to state 21
    CMD_WHILE  go to state 22
    DECL_VAR   go to state 23
    DECL_FUN   go to state 24
    E_V        go to state 25
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29


State 1

   47 E: _ID . '=' EE
   48  | _ID . _MAIS_IGUAL EE
   49  | _ID . _MENOS_IGUAL EE
   50  | _ID . _SETA EE
   51  | _ID . _SETA '{' CMD CMDs '}'
   68 F: _ID .

    _SETA         shift, and go to state 30
    _MAIS_IGUAL   shift, and go to state 31
    _MENOS_IGUAL  shift, and go to state 32
    '='           shift, and go to state 33

    $default  reduce using rule 68 (F)


State 2

   69 F: _NUM .

    $default  reduce using rule 69 (F)


State 3

   70 F: _STRING .

    $default  reduce using rule 70 (F)


State 4

   22 DECL_VAR: _LET . LVARs

    _ID  shift, and go to state 34

    LVARs  go to state 35
    LVAR   go to state 36


State 5

   23 DECL_VAR: _VAR . VVARs

    _ID  shift, and go to state 37

    VVARs  go to state 38
    VVAR   go to state 39


State 6

   24 DECL_VAR: _CONST . CTEs

    _ID  shift, and go to state 40

    CTEs  go to state 41


State 7

   17 CMD_FOR: _FOR . '(' E_OPC ';' E_OPC ';' E_OPC ')' CMD
   18        | _FOR . '(' DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

    '('  shift, and go to state 42


State 8

   25 DECL_FUN: _FUNCTION . _ID '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   26         | _FUNCTION . _ID '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO
   81 FUNC_ANON: _FUNCTION . '(' ')' '{' CMDs '}'
   82          | _FUNCTION . '(' PARAMs ')' '{' CMDs '}'

    _ID  shift, and go to state 43
    '('  shift, and go to state 44


State 9

   15 CMD_IF: _IF . '(' E ')' CMD _ELSE CMD
   16       | _IF . '(' E ')' CMD

    '('  shift, and go to state 45


State 10

   13 CMD: _RETURN . ';'
   14    | _RETURN . EE ';'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 47
    '{'        shift, and go to state 48

    EE         go to state 49
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 11

   19 CMD_WHILE: _WHILE . '(' E ')' CMD

    '('  shift, and go to state 51


State 12

   80 F: '-' . _NUM

    _NUM  shift, and go to state 52


State 13

   75 F: '[' . ']'
   76  | '[' . ARGs ']'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48
    ']'        shift, and go to state 53

    EE         go to state 54
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29
    ARGs       go to state 55


State 14

   53 E: '(' . _FPSETA EE
   54  | '(' . PARAMs _FPSETA EE
   71 F: '(' . EE ')'

    _ID        shift, and go to state 56
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    _FPSETA    shift, and go to state 57
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    PARAMs     go to state 58
    PARAM      go to state 59
    EE         go to state 60
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 15

   12 CMD: ';' .

    $default  reduce using rule 12 (CMD)


State 16

   10 CMD: '{' . CMD CMDs '}'
   11    | '{' . '}'
   46 EE: '{' . '}'
   77 F: '{' . CAMPOs '}'

    _ID        shift, and go to state 61
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 46
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 15
    '{'        shift, and go to state 16
    '}'        shift, and go to state 62

    CMD        go to state 63
    CMD_IF     go to state 20
    CMD_FOR    go to state 21
    CMD_WHILE  go to state 22
    E_V        go to state 25
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29
    CAMPOs     go to state 64


State 17

    0 $accept: S . $end

    $end  shift, and go to state 65


State 18

    1 S: CMDs .

    $default  reduce using rule 1 (S)


State 19

    2 CMDs: CMD . CMDs

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 15
    '{'        shift, and go to state 16

    $default  reduce using rule 5 (CMDs)

    CMDs       go to state 66
    CMD        go to state 19
    CMD_IF     go to state 20
    CMD_FOR    go to state 21
    CMD_WHILE  go to state 22
    DECL_VAR   go to state 23
    DECL_FUN   go to state 24
    E_V        go to state 25
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29


State 20

    7 CMD: CMD_IF .

    $default  reduce using rule 7 (CMD)


State 21

    6 CMD: CMD_FOR .

    $default  reduce using rule 6 (CMD)


State 22

    8 CMD: CMD_WHILE .

    $default  reduce using rule 8 (CMD)


State 23

    3 CMDs: DECL_VAR . ';' CMDs

    ';'  shift, and go to state 67


State 24

    4 CMDs: DECL_FUN . CMDs

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 15
    '{'        shift, and go to state 16

    $default  reduce using rule 5 (CMDs)

    CMDs       go to state 68
    CMD        go to state 19
    CMD_IF     go to state 20
    CMD_FOR    go to state 21
    CMD_WHILE  go to state 22
    DECL_VAR   go to state 23
    DECL_FUN   go to state 24
    E_V        go to state 25
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29


State 25

    9 CMD: E_V . ';'

    ';'  shift, and go to state 69


State 26

   52 E: EE . _INC
   59  | EE . '<' EE
   60  | EE . '*' EE
   61  | EE . '+' EE
   62  | EE . '-' EE
   63  | EE . '/' EE
   64  | EE . '>' EE
   65  | EE . '%' EE
   66  | EE . _IGUAL_IGUAL EE
   78 F: EE . '.' _ID

    _INC          shift, and go to state 70
    _IGUAL_IGUAL  shift, and go to state 71
    '<'           shift, and go to state 72
    '>'           shift, and go to state 73
    '+'           shift, and go to state 74
    '-'           shift, and go to state 75
    '*'           shift, and go to state 76
    '/'           shift, and go to state 77
    '%'           shift, and go to state 78
    '.'           shift, and go to state 79


State 27

   43 E_V: E . ',' E_V
   44    | E .
   45 EE: E .

    ','  shift, and go to state 80

    ';'       reduce using rule 44 (E_V)
    ')'       reduce using rule 44 (E_V)
    $default  reduce using rule 45 (EE)


State 28

   55 E: F . '.' _ID '=' EE
   56  | F . '.' _ID _MAIS_IGUAL EE
   57  | F . '[' EE ']' '=' EE
   58  | F . '[' EE ']' _MAIS_IGUAL EE
   67  | F .
   72 F: F . '(' ')'
   73  | F . '[' EE ']'
   74  | F . '(' ARGs ')'

    '['  shift, and go to state 81
    '('  shift, and go to state 82
    '.'  shift, and go to state 83

    '.'       [reduce using rule 67 (E)]
    $default  reduce using rule 67 (E)


State 29

   79 F: FUNC_ANON .

    $default  reduce using rule 79 (F)


State 30

   50 E: _ID _SETA . EE
   51  | _ID _SETA . '{' CMD CMDs '}'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 84

    EE         go to state 85
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 31

   48 E: _ID _MAIS_IGUAL . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 86
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 32

   49 E: _ID _MENOS_IGUAL . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 87
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 33

   47 E: _ID '=' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 88
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 34

   37 LVAR: _ID . '=' EE
   38     | _ID .

    '='  shift, and go to state 89

    $default  reduce using rule 38 (LVAR)


State 35

   22 DECL_VAR: _LET LVARs .

    $default  reduce using rule 22 (DECL_VAR)


State 36

   33 LVARs: LVAR . ',' LVARs
   34      | LVAR .

    ','  shift, and go to state 90

    $default  reduce using rule 34 (LVARs)


State 37

   39 VVAR: _ID . '=' EE
   40     | _ID .

    '='  shift, and go to state 91

    $default  reduce using rule 40 (VVAR)


State 38

   23 DECL_VAR: _VAR VVARs .

    $default  reduce using rule 23 (DECL_VAR)


State 39

   35 VVARs: VVAR . ',' VVARs
   36      | VVAR .

    ','  shift, and go to state 92

    $default  reduce using rule 36 (VVARs)


State 40

   41 CTEs: _ID . '=' EE ',' CTEs
   42     | _ID . '=' EE

    '='  shift, and go to state 93


State 41

   24 DECL_VAR: _CONST CTEs .

    $default  reduce using rule 24 (DECL_VAR)


State 42

   17 CMD_FOR: _FOR '(' . E_OPC ';' E_OPC ';' E_OPC ')' CMD
   18        | _FOR '(' . DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    $default  reduce using rule 21 (E_OPC)

    E_OPC      go to state 94
    DECL_VAR   go to state 95
    E_V        go to state 96
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29


State 43

   25 DECL_FUN: _FUNCTION _ID . '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   26         | _FUNCTION _ID . '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO

    '('  shift, and go to state 97


State 44

   81 FUNC_ANON: _FUNCTION '(' . ')' '{' CMDs '}'
   82          | _FUNCTION '(' . PARAMs ')' '{' CMDs '}'

    _ID  shift, and go to state 98
    ')'  shift, and go to state 99

    PARAMs  go to state 100
    PARAM   go to state 59


State 45

   15 CMD_IF: _IF '(' . E ')' CMD _ELSE CMD
   16       | _IF '(' . E ')' CMD

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 26
    E          go to state 101
    F          go to state 28
    FUNC_ANON  go to state 29


State 46

   81 FUNC_ANON: _FUNCTION . '(' ')' '{' CMDs '}'
   82          | _FUNCTION . '(' PARAMs ')' '{' CMDs '}'

    '('  shift, and go to state 44


State 47

   13 CMD: _RETURN ';' .

    $default  reduce using rule 13 (CMD)


State 48

   46 EE: '{' . '}'
   77 F: '{' . CAMPOs '}'

    _ID  shift, and go to state 102
    '}'  shift, and go to state 103

    CAMPOs  go to state 64


State 49

   14 CMD: _RETURN EE . ';'
   52 E: EE . _INC
   59  | EE . '<' EE
   60  | EE . '*' EE
   61  | EE . '+' EE
   62  | EE . '-' EE
   63  | EE . '/' EE
   64  | EE . '>' EE
   65  | EE . '%' EE
   66  | EE . _IGUAL_IGUAL EE
   78 F: EE . '.' _ID

    _INC          shift, and go to state 70
    _IGUAL_IGUAL  shift, and go to state 71
    '<'           shift, and go to state 72
    '>'           shift, and go to state 73
    '+'           shift, and go to state 74
    '-'           shift, and go to state 75
    '*'           shift, and go to state 76
    '/'           shift, and go to state 77
    '%'           shift, and go to state 78
    '.'           shift, and go to state 79
    ';'           shift, and go to state 104


State 50

   45 EE: E .

    $default  reduce using rule 45 (EE)


State 51

   19 CMD_WHILE: _WHILE '(' . E ')' CMD

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 26
    E          go to state 105
    F          go to state 28
    FUNC_ANON  go to state 29


State 52

   80 F: '-' _NUM .

    $default  reduce using rule 80 (F)


State 53

   75 F: '[' ']' .

    $default  reduce using rule 75 (F)


State 54

   52 E: EE . _INC
   59  | EE . '<' EE
   60  | EE . '*' EE
   61  | EE . '+' EE
   62  | EE . '-' EE
   63  | EE . '/' EE
   64  | EE . '>' EE
   65  | EE . '%' EE
   66  | EE . _IGUAL_IGUAL EE
   78 F: EE . '.' _ID
   85 ARGs: EE . ',' ARGs
   86     | EE .

    _INC          shift, and go to state 70
    _IGUAL_IGUAL  shift, and go to state 71
    ','           shift, and go to state 106
    '<'           shift, and go to state 72
    '>'           shift, and go to state 73
    '+'           shift, and go to state 74
    '-'           shift, and go to state 75
    '*'           shift, and go to state 76
    '/'           shift, and go to state 77
    '%'           shift, and go to state 78
    '.'           shift, and go to state 79

    $default  reduce using rule 86 (ARGs)


State 55

   76 F: '[' ARGs . ']'

    ']'  shift, and go to state 107


State 56

   31 PARAM: _ID . '=' EE
   32      | _ID .
   47 E: _ID . '=' EE
   48  | _ID . _MAIS_IGUAL EE
   49  | _ID . _MENOS_IGUAL EE
   50  | _ID . _SETA EE
   51  | _ID . _SETA '{' CMD CMDs '}'
   68 F: _ID .

    _SETA         shift, and go to state 30
    _MAIS_IGUAL   shift, and go to state 31
    _MENOS_IGUAL  shift, and go to state 32
    '='           shift, and go to state 108

    _FPSETA   reduce using rule 32 (PARAM)
    ','       reduce using rule 32 (PARAM)
    $default  reduce using rule 68 (F)


State 57

   53 E: '(' _FPSETA . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 109
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 58

   54 E: '(' PARAMs . _FPSETA EE

    _FPSETA  shift, and go to state 110


State 59

   29 PARAMs: PARAM . ',' PARAMs
   30       | PARAM .

    ','  shift, and go to state 111

    $default  reduce using rule 30 (PARAMs)


State 60

   52 E: EE . _INC
   59  | EE . '<' EE
   60  | EE . '*' EE
   61  | EE . '+' EE
   62  | EE . '-' EE
   63  | EE . '/' EE
   64  | EE . '>' EE
   65  | EE . '%' EE
   66  | EE . _IGUAL_IGUAL EE
   71 F: '(' EE . ')'
   78  | EE . '.' _ID

    _INC          shift, and go to state 70
    _IGUAL_IGUAL  shift, and go to state 71
    '<'           shift, and go to state 72
    '>'           shift, and go to state 73
    '+'           shift, and go to state 74
    '-'           shift, and go to state 75
    '*'           shift, and go to state 76
    '/'           shift, and go to state 77
    '%'           shift, and go to state 78
    '.'           shift, and go to state 79
    ')'           shift, and go to state 112


State 61

   47 E: _ID . '=' EE
   48  | _ID . _MAIS_IGUAL EE
   49  | _ID . _MENOS_IGUAL EE
   50  | _ID . _SETA EE
   51  | _ID . _SETA '{' CMD CMDs '}'
   68 F: _ID .
   84 CAMPOs: _ID . ':' EE

    _SETA         shift, and go to state 30
    _MAIS_IGUAL   shift, and go to state 31
    _MENOS_IGUAL  shift, and go to state 32
    '='           shift, and go to state 33
    ':'           shift, and go to state 113

    $default  reduce using rule 68 (F)


State 62

   11 CMD: '{' '}' .
   46 EE: '{' '}' .

    _INC          reduce using rule 46 (EE)
    _IGUAL_IGUAL  reduce using rule 46 (EE)
    '<'           reduce using rule 46 (EE)
    '>'           reduce using rule 46 (EE)
    '+'           reduce using rule 46 (EE)
    '-'           reduce using rule 11 (CMD)
    '-'           [reduce using rule 46 (EE)]
    '*'           reduce using rule 46 (EE)
    '/'           reduce using rule 46 (EE)
    '%'           reduce using rule 46 (EE)
    '.'           reduce using rule 46 (EE)
    $default      reduce using rule 11 (CMD)


State 63

   10 CMD: '{' CMD . CMDs '}'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 15
    '{'        shift, and go to state 16

    $default  reduce using rule 5 (CMDs)

    CMDs       go to state 114
    CMD        go to state 19
    CMD_IF     go to state 20
    CMD_FOR    go to state 21
    CMD_WHILE  go to state 22
    DECL_VAR   go to state 23
    DECL_FUN   go to state 24
    E_V        go to state 25
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29


State 64

   77 F: '{' CAMPOs . '}'
   83 CAMPOs: CAMPOs . ',' CAMPOs

    ','  shift, and go to state 115
    '}'  shift, and go to state 116


State 65

    0 $accept: S $end .

    $default  accept


State 66

    2 CMDs: CMD CMDs .

    $default  reduce using rule 2 (CMDs)


State 67

    3 CMDs: DECL_VAR ';' . CMDs

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    ';'        shift, and go to state 15
    '{'        shift, and go to state 16

    $default  reduce using rule 5 (CMDs)

    CMDs       go to state 117
    CMD        go to state 19
    CMD_IF     go to state 20
    CMD_FOR    go to state 21
    CMD_WHILE  go to state 22
    DECL_VAR   go to state 23
    DECL_FUN   go to state 24
    E_V        go to state 25
    EE         go to state 26
    E          go to state 27
    F          go to state 28
    FUNC_ANON  go to state 29


State 68

    4 CMDs: DECL_FUN CMDs .

    $default  reduce using rule 4 (CMDs)


State 69

    9 CMD: E_V ';' .

    $default  reduce using rule 9 (CMD)


State 70

   52 E: EE _INC .

    $default  reduce using rule 52 (E)


State 71

   66 E: EE _IGUAL_IGUAL . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 118
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 72

   59 E: EE '<' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 119
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 73

   64 E: EE '>' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 120
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 74

   61 E: EE '+' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 121
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 75

   62 E: EE '-' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 122
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 76

   60 E: EE '*' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 123
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 77

   63 E: EE '/' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 46
    '-'        shift, and go to state 12
    '['        shift, and go to state 13
    '('        shift, and go to state 14
    '{'        shift, and go to state 48

    EE         go to state 124
    E          go to state 50
    F          go to state 28
    FUNC_ANON  go to state 29


State 78

   65 E: EE '%' . EE
